# LinguaSub-demo

./: .gitignore  README.md  eslint.config.js  index.html  linguasub-backend.spec  package-lock.json  package.json  vite.config.ts
backend/: requirements.txt  run_server.py
backend/app/: __init__.py  agent_service.py  config_service.py  environment_service.py  export_service.py  import_service.py  logging_service.py  models.py  recognition_text_export_service.py  server.py  speech_runtime_service.py  srt_service.py  subtitle_alignment_service.py  task_history_service.py  transcription_service.py  translation_service.py  video_burn_export_service.py  (+2 more)
docs/: step-10-windows-packaging.md  step-2-data-models.md  step-3-config-and-translation.md  step-4-import-module.md  step-5-srt-module.md  step-6-transcription-module.md  step-7-translation-flow.md  step-8-preview-editing.md  step-9-export-flow.md
examples/: data-models.example.json  demo-bilingual-output.srt  demo-import.single.srt  demo-import.srt  export-flow.example.json  import-module.example.json  preview-editing.example.json  qa-smoke-transcript.docx  srt-module.example.json  transcription-module.example.json  translation-flow.example.json  translation-service.example.json
scripts/: prepare-release-runtime.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/runtime/: README.md
src-tauri/resources/runtime/ffmpeg/: README.md
src-tauri/src/: main.rs
src-tauri/windows/: hooks.nsh
(+107 files in other folders)
