[package]
name = "linguasub"
version = "0.1.0"
description = "LinguaSub desktop shell"
authors = ["LinguaSub"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
